fixing creation cases

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,16 @@
 
   <body>
     <%= render 'layouts/navbar' %>
+    <% if notice.present? %>
+      <div class="alert alert-success">
+      <p id="notice"><%= notice %></p>
+    </div>
+    <% end %>
+    <% if alert.present? %>
+      <div class="alert alert-danger">
+      <p id="alert"><%= alert %></p>
+      </div>
+    <% end %>
     <div class="container">
       <%= yield %>
     </div>
